<!-- to update mvn versions:display-plugin-updates -->
<!-- mvn versions:use-latest-plugin-versions -->
<!-- update dependencies mvn versions:use-latest-versions -->
<!-- javadoc mvn javadoc:javadoc -->
<!-- also javadoc mvn verify -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.myster</groupId>
    <artifactId>Myster</artifactId>
    <version>10.0.0</version>

    <dependencies>
        <dependency>
            <groupId>com.simtechdata</groupId>
            <artifactId>WaifUPnP</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>com.mpatric</groupId>
            <artifactId>mp3agic</artifactId>
            <version>0.9.1</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
        
            <!-- JUnit 5 Parameterized Tests dependency -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.8.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <version>1.77</version>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <outputName>MysterBuild</outputName> <!-- Custom property for output filename -->
        <mainclass>com.myster.Myster</mainclass>
      
    </properties>

    <build>
        <finalName>${project.artifactId}-partial</finalName> <!-- Use custom property for output
        file name -->

        <plugins>
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version> <!-- Use the latest version -->
                <executions>
                    <execution>
                        <id>generate-javadoc</id>
                        <phase>verify</phase> <!-- Bind to a lifecycle phase, e.g., 'verify' -->
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                <useFile>false</useFile>
                <systemPropertyVariables>
                    <java.util.logging.config.file>src/test/resources/test.logging.properties</java.util.logging.config.file>
                </systemPropertyVariables>
                </configuration>
            </plugin>

            <!-- JAR Plugin for packaging -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <outputDirectory>${project.basedir}/bin</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
        
                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${mainclass}</mainClass>
                                </transformer>
                            </transformers>
                            <outputFile>${project.basedir}/bin/${outputName}.jar</outputFile> 
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Exec plugin for jpackage -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Windows Profile -->
        <profile>
            <id>windows-build</id>
            <activation>
                <os>
                    <family>Windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>package-app-windows</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--input</argument>
                                        <argument>${project.basedir}/bin</argument>
                                        <argument>--name</argument>
                                        <argument>Myster</argument>
                                        <argument>--main-class</argument>
                                        <argument>${mainclass}</argument>
                                        <argument>--add-modules</argument>
                                        <argument>java.base,java.desktop,java.prefs,java.xml</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.basedir}/bin/${outputName}.jar</argument>
                                        <argument>--win-menu</argument>
                                        <argument>--win-menu-group</argument>
                                        <argument>Myster</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                        <argument>--icon</argument>
                                        <argument>program_icon.ico</argument>
                                        <argument>--type</argument>
                                        <argument>exe</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- macOS Profile -->
        <profile>
            <id>macos-build</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>package-app-macos</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--input</argument>
                                        <argument>${project.basedir}/bin</argument>
                                        <argument>--name</argument>
                                        <argument>Myster</argument>
                                        <argument>--main-class</argument>
                                        <argument>${mainclass}</argument>
                                        <argument>--add-modules</argument>
                                        <argument>java.base,java.desktop,java.prefs,java.xml</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.basedir}/bin/${outputName}.jar</argument>
                                        <argument>--type</argument>
                                        <argument>dmg</argument>
                                        <argument>--icon</argument>
                                        <argument>program_icon.icns</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- linux Profile -->
        <profile>
            <id>linux-build</id>
            <activation>
                <os>
                    <family>linux</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>package-app-linux</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--input</argument>
                                        <argument>${project.basedir}/bin</argument>
                                        <argument>--name</argument>
                                        <argument>Myster</argument>
                                        <argument>--main-class</argument>
                                        <argument>${mainclass}</argument>
                                        <argument>--add-modules</argument>
                                        <argument>java.base,java.desktop,java.prefs,java.xml</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.basedir}/bin/${outputName}.jar</argument>
                                        <argument>--type</argument>
                                        <argument>rpm</argument>
                                        <argument>--icon</argument>
                                        <argument>program_icon.png</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>

